# anywidget

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  Untitled.ipynb  Untitled1.ipynb  anywidget.json  biome.json  dprint.json  package-lock.json  package.json  playwright.config.js  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  setup.cfg  setup.py  tsconfig.json  types.d.ts  vite-plugin.js  vitest.workspace.js
.changeset/: afraid-panthers-explain.md  afraid-panthers-jam.md  big-guests-cover.md  blue-bulldogs-flow.md  blue-feet-fall.md  blue-mayflies-cough.md  blue-spoons-return.md  breezy-parrots-help.md  breezy-wolves-grow.md  bright-cycles-boil.md  bright-pots-invent.md  brown-cougars-cover.md  brown-jokes-yell.md  brown-points-post.md  bumpy-loops-battle.md  calm-falcons-brush.md  calm-laws-fetch.md  chilled-ducks-know.md  chilly-zebras-appear.md  clever-houses-float.md  clever-ladybugs-float.md  clever-lobsters-type.md  config.json  cool-mails-work.md  cuddly-fishes-heal.md  cuddly-glasses-sell.md  cyan-dragons-sell.md  cyan-ducks-rush.md  cyan-suits-share.md  cyan-wombats-suffer.md  deep-beds-reply.md  dry-jobs-know.md  dull-cycles-sort.md  early-parents-reply.md  eight-owls-cheat.md  eight-yaks-impress.md  eleven-dolphins-camp.md  eleven-games-guess.md  eleven-readers-wash.md  empty-walls-know.md  (+110 more)
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: ci-js.yml  ci.yml  joss.yml  jsr.yml  publish.yml  release.yml
anywidget/: __init__.py  _cellmagic.py  _decorator.py  _descriptor.py  _displayable.py  _file_contents.py  _patch_ipywidgets.py  _protocols.py  _static_asset.py  _util.py  _version.py  _watcher.py  devtools.py  experimental.py  widget.py
anywidget/nbextension/: extension.js
demo/: build-environment.yml  environment.yml
docs/: README.md  astro.config.js  astro.config.mjs  package-lock.json  package.json  tailwind.config.cjs  tailwind.config.js  tsconfig.json
docs/public/: make-scrollable-code-focusable.js  robots.txt
docs/scripts/: ipynb.mjs  render.py  utils.mjs
docs/src/: config.ts  consts.ts  languages.ts  util.ts
docs/src/components/: Banner.astro  CodeHero.astro  ConfettiButton.astro  Counter.astro  CounterButton.astro  Gallery.astro  GitHubCard.astro  HeadCommon.astro  HeadSEO.astro  Hero.astro  IntegrationsGallery.astro  Link.astro  WidgetGallery.astro
docs/src/components/Footer/: AvatarList.astro  Footer.astro
docs/src/components/Header/: AnyWidgetLogo.astro  Header.astro  LanguageSelect.tsx  Search.css  Search.tsx  SidebarToggle.css  SidebarToggle.tsx  SkipToContent.astro  ThemeToggleButton.css  ThemeToggleButton.tsx
docs/src/components/LeftSidebar/: LeftSidebar.astro
docs/src/components/PageContent/: PageContent.astro
docs/src/components/RightSidebar/: MoreMenu.astro  RightSidebar.astro  TableOfContents.tsx  ThemeToggleButton.css
docs/src/components/examples/: Counter.astro
docs/src/layouts/: Base.astro  BaseLayout.astro  MainLayout.astro  SplashLayout.astro
docs/src/pages/: afm.md  index.astro
docs/src/pages/blog/: a-year-with-anywidget.md  anywidget-02.md  anywidget-020.mdx  introducing-anywidget.mdx
docs/src/pages/en/: Example.ipynb  afm.md  annoucement.mdx  announcement.mdx  anywidget-front-end-module.md  bundling.md  community.mdx  counter.ipynb  experimental.md  gallery.mdx  getting-started.md  getting-started.mdx  introduction.md  jupyter-widgets-the-good-parts.md  jupyter-widgets-the-good-parts.mdx  page-2.md  page-3.md  page-4.md
docs/src/pages/en/blog/: introducing-anywidget.mdx
docs/src/pages/en/notebooks/: counter.ipynb
docs/src/styles/: index.css  index2.css  theme.css
e2e/: Test.ipynb  notebooks.spec.js  notebooks.spec.ts
e2e/fixtures/: html.ipynb  lab.ipynb
examples/: Counter-hooks.ipynb  Counter-htm.ipynb  Counter.ipynb  Untitled1.ipynb  decorator.ipynb  descriptor.ipynb  displayable.ipynb  minimal_example.ipynb
examples/minimal_widget/: index.js  minimal_example.ipynb
paper/: export-pdf.ts  myst.yml  paper.bib  paper.md  prepare-myst.ts
patches/: @jupyter-widgets__base-manager.patch  @jupyter-widgets__base.patch
scripts/: prepack.mjs
src/: plugin.js  widget.js
src/anywidget/nbextension/: extension.js
tests/: test_cellmagic.py  test_colab.py  test_decorator.py  test_descriptor.py  test_experimental.py  test_file_contents.py  test_protocols.py  test_utils.py  test_widget.py
