[metadata]
name = anywidget
author = Trevor Manz
author_email = trevor.j.manz@gmail.com
license = MIT
description = A reusable Jupyter Widget
url = https://github.com/manzt/anywidget
long_description = file: README.md
long_description_content_type = text/markdown

[options]
include_package_data = True
packages = find:
install_requires = ipywidgets
python_requires = >=3.7

[options.extras_require]
test =
    black
    pytest

[options.package_data]
* = nbextension/*.js, labextension/**/*, package.json
